...
        navigation.goBack()
    };

    const handleSave = () => {
        const datenew = dateText+"-"+timeText
        const dataNew = {
            title : title,
            description : des,
            datetime : datenew,
            published : data.published,
            favourite : data.favourite,
        };
        navigation.navigate({
...
                <ScrollView style={styles.Scrollview_size}>

                    <Text style={styles.Text_size}>Title name:</Text>
                    
                    <View style={styles.Name_square}>
                        <TextInput 
                            testID='edit-title'
                            style={styles.Name_input} 
                            placeholder='Enter the name'
                            value = {title}
                            onChangeText = {(text) => setTitle(text)}
                        />
                    </View>

                    <Text style={styles.Text_size}>Detail:</Text>
                    <View style={styles.Detail_square}>
                        <TextInput
                            testID='edit-detail' 
                            style={styles.Detail_input} 
                            multiline={true} 
                            editable={true} 
                            placeholder='Note something?'
                            value = {des}
                            onChangeText = {(text) => setDes(text)}
                        />
                    </View>

                    <View style={styles.Datetime_footer} testID='edit-time'>
                        <Text style={styles.Text_size}>Date:</Text>
                        <View style={styles.Date_square}>
                            <Pressable style={styles.Date_icon} onPress={() => showMode('date')}>
                                <Text style={styles.Date_size}>{dateText}</Text>
                            </Pressable>
                        </View>
...
                    </View>

                </ScrollView>
                
                <View style={styles.BT_footer}>
                    <View style={styles.SaveBT_footer} /*  */
                    testID='update'>
                        <Pressable style={styles.Save_icon} onPress={() => handleSave()}>
                            <Text style={styles.Save_text}>SAVE</Text>
                        </Pressable>
                    </View>
                    <View style={styles.DeleteBT_footer} testID='delete'>
                        <Pressable style={styles.Delete_icon} onPress={() => handleDelete()}>
                            <Text style={styles.Delete_text}>DELETE</Text>
                        </Pressable>
                    </View>
                </View>

...
