...
                            onChangeText = {(text) => setTitle(text)}
                        />
                    </View>
                    <Text style={styles.Text_size}>Detail:</Text>
                    <View style={styles.Detail_square} >
                        <TextInput 
                            testID="detail"
                            style={styles.Detail_input} 
                            multiline={true} 
                            editable={true} 
                            placeholder='Note something?'
                            value = {des}
                            onChangeText = {(text) => setDes(text)}
                        />
                    </View>

                    <View style={styles.Datetime_footer} testID='dateTimePicker'>
                        <Text style={styles.Text_size}>Date:</Text>
                        <View style={styles.Date_square}>
                            <Pressable style={styles.Date_icon} onPress={() => showMode('date')}>
                                <Text style={styles.Date_size}>{dateText}</Text>
                            </Pressable>
                        </View>
...
                    </View>

                </ScrollView>
                
                <View style={styles.SaveBT_footer} >
                    <Pressable
                    testID="savebutton"
                    style={styles.Save_icon} 
                    onPress={() => handlesave()}>
                        <Text style={styles.Save_text}>SAVE</Text>
                    </Pressable>
                </View>
            </View>
...
